# dotfiles

./: .gitignore  .gitmodules  Dockerfile  README.md  sudoers
alacritty/: alacritty.yml
alacritty/Mac/: alacritty.yml
applications/: bilibili-download.desktop  cfw.desktop  fluent-reader.desktop  obsidian.desktop  zotero.desktop
asynctasks/: tasks.ini
buzz/: buzz.toml  services.csv  setup.sh
cargo/: .cargo-remote.toml.gpg  config  config.toml  rust-toolchain.toml
cert/: gen-cert.sh  openssl-ca.cnf  openssl-client.cnf  openssl-server.cnf  openssl.cnf
clangd/: .clangd
clangformat/: .clang-format
clash/: config.yaml  jms.yaml.gpg
cmake/: CMakeLists.txt
cmake/Modules/: FindTcmalloc.cmake
cmake/src/: kernel.cu  kernel.h
cmake/tests/: CMakeLists.txt  test.cpp
coc/: .minivimrc  .vimrc  coc-settings.json  install.sh  package.json
coc/Mac/: .vimrc
coc/Termux/: .vimrc
compose/: elastic.yml  emqx.yml  kafka.yml
conky/: conky.conf
ctags/: .ctags
deepin-wine/: install.sh  msyh_consola_config.reg
deepinwine/: install.sh
dependencies/: Rust
dns/: doh  doq  dot  doudp
docker/: daemon.json
dockerfiles/base/: Dockerfile
dockerfiles/compose/: default.yml
dockerfiles/cuda/: Dockerfile
dockerfiles/cxx/: Dockerfile
dockerfiles/golang/: Dockerfile
dockerfiles/nodejs/: Dockerfile
dockerfiles/openwrt/: Dockerfile
dockerfiles/openwrt/cmake/: toolchain.linux-mips.cmake
dockerfiles/rust/: Dockerfile
eslint/: .eslintrc.js  browser.eslintrc.js  browser.eslintrc.json  node.eslintrc.js  node.eslintrc.json
etc/: hosts
fcitx/: install.sh  sogoupinyin_2.2.0.0108_amd64.deb?st=ryCwKkvb-0zXvtBlhw5q4Q&e=1529739124&fn=sogoupinyin_2.2.0.0108_amd64.deb
ffi/: Cargo.toml  build.rs
ffi/go/: go.mod
ffi/go/cmd/: main.go
ffi/src/: main.rs
fish/: config.fish
fonts/: fonts.conf  install-fira-code.sh
foundry/: foundry.toml
frp/etc/frp/: frpc.ini  frps.ini
git/: .gitconfig  .gitignore
gtk2/: .gtkrc-2.0
gtk3/: gtk.css
jms/: jmsconfig.json.gpg
jupyter/: sagemath.ipynb
learning-curve/: zk.md
lxd/: config.yml
mdbook/: book.toml
musics/: musics.md
nginx/: alexcj96.com  default
npm/: .npmrc
openvpn/: client.sh  server.sh
openvpn/configs/: build-server.ovpn.gpg
prettier/: .prettierrc.js
proxychains/: proxychains4.conf
python/: pip.conf
redis/: redis.conf
redshift/: redshift.conf
rustfmt/: rustfmt.toml
scripts/: .config  create_container.sh  daemon.sh  db.sh  dedup.sh  ebook-convert.sh  forward_port.sh  normalize-filename.py  normalize-filename.sh  openwrtcross.sh  osxcross.sh  remove-duplicated.sh  remove-prefix.sh  remove-spaces.sh  setup.sh  trust-CA.sh  wincross.sh
snippets/: rust.snippets  vim.snippets
ssh/: config  config.gpg  generate-dropbear-key.sh
stylelint/: .stylelintrc
substrate/: rpc.json
switchy-omega/: OmegaOptions.bak.gpg
systemd/: daemon.sh  services.csv  setup.sh
systemd/services/: services.csv
tern/: .tern-config
tmux/: .tmux.conf  .tmuxline_snapshot
tmux/Mac/: .tmux.conf
tmux/Termux/: .tmux.conf
vim/: .vimrc  README.md  install.sh
vim.deprecated/: .vimrc  install.sh
vimregex/: regex.md
vimspector/: .vimspector.json
vm/: Vagrantfile
wakatime/: .wakatime.cfg.gpg
xmonad/: xmonad.hs
z2h/: z2h.md
zshrc/: .zshenv  .zshrc
zshrc/Mac/: .zshrc
zshrc/Termux/: .zshrc
zshrc/darwin/: .zshrc
